--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin          : 0;
     padding         : 0;
     font-family     : Arial, Helvetica, sans-serif;
-    background-color: 18F70A;
+    background-color: #18F70A;
 }
 
 .container {
