--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin          : 0;
     padding         : 0;
     font-family     : Arial, Helvetica, sans-serif;
-    background-color: #18F70A;
+    background-color: #0EE3DF;
 }
 
 .container {
@@ -30,7 +30,7 @@ body {
     position        : absolute;
     padding         : 10px 20px;
     font-size       : 18px;
-    background-color: #02F9DB;
+    background-color: #E30E9C;
     color           : white;
     border          : none;
     border-radius   : 3px;
