--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     position        : absolute;
     padding         : 10px 20px;
     font-size       : 18px;
-    background-color: #E30E9C;
+    background-color: #F51C02;
     color           : white;
     border          : none;
     border-radius   : 3px;
