--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin          : 0;
     padding         : 0;
     font-family     : Arial, Helvetica, sans-serif;
-    background-color: #0EE3DF;
+    background-color: #FFFF00;
 }
 
 .container {
