--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 html,
 body {
-    margin          : 0;
-    padding         : 0;
-    font-family     : Arial, Helvetica, sans-serif;
-    background-color: #FFFF00;
+    background-image: url(https://images.app.goo.gl/AdZjANitmbKUyVRA9);
+    color: #FFFFFF;
 }
 
 .container {
