--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html,
 body {
-    background-image: url(https://images.app.goo.gl/AdZjANitmbKUyVRA9);
-    color: #FFFFFF;
+    background-image: url(FONDO.jpg);
+    background-size: 100%;
 }
 
 .container {
