--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image: url(.. / style/FONDO.jpeg);
+    background-image: url(https://images.app.goo.gl/fefjoqqNNHruy9hc8);
     background-size: 100%;
 }
 
