--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image: url(https://juventud-dehoniana.blogspot.com/2015/10/metodologia-de-pastoral-juvenil-para.html);
+    background-image: url(../style.css/FONDO.jpeg);
     background-size: 100%;
 }
 
