--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image: url(../style.css/imagen.jpg);
+    background-image: url(imagen.jpg);
     background-size: 100%;
 }
 
