--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image: url(../style/FONDO.jpeg);
+    background-image: url(../style.css/FONDO.jpeg);
     background-size: 100%;
 }
 
