--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html,
 body {
-    background-image: url(../style.css/imagen.jpg);
-    background-size: 100%;
+    margin          : 0;
+    padding         : 0;
+    font-family     : Arial, Helvetica, sans-serif;
+    background-color: #FFFB0B;
 }
 
 .container {
