--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url(../style.css/image.jpg);
+    background-image:url(FONDO.jpeg);
     background-size:100%;
 }
 
