--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url(FONDO.png);
+    background-image:url('https://www.expreso.com.pe/wp-content/uploads/2022/03/PNP.jpg');
     background-size:100%;
 }
 
