--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     padding         : 10px 20px;
     font-size       : 18px;
     background-color: #F51C02;
-    color           : purple;
+    color           : white;
     border          : none;
     border-radius   : 3px;
 }
