--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url('https://www.expreso.com.pe/wp-content/uploads/2022/03/PNP.jpg');
+    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbiblioteca-central.umsa.bo%2Fgaleria-de-imagenes&psig=AOvVaw3izRFyr1hM0xEwjeLOTCM3&ust=1704772731980000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCNDJzrvzzIMDFQAAAAAdAAAAABAS');
     background-size:100%;
 }
 
