--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fbiblioteca-central.umsa.bo%2Fgaleria-de-imagenes&psig=AOvVaw3izRFyr1hM0xEwjeLOTCM3&ust=1704772731980000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCNDJzrvzzIMDFQAAAAAdAAAAABAS');
+    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.umsa.bo%2Fprogramas-umsa%2F-%2Fasset_publisher%2FUGcaErs6iuqN%2Fcontent%2Fmisionvisionvalores%2F3737644&psig=AOvVaw28ew-0E9b3ARTdjB6xn2zy&ust=1704812638688000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIDrsZOIzoMDFQAAAAAdAAAAABAI');
     background-size:100%;
 }
 
