--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.umsa.bo%2Fprogramas-umsa%2F-%2Fasset_publisher%2FUGcaErs6iuqN%2Fcontent%2Fmisionvisionvalores%2F3737644&psig=AOvVaw28ew-0E9b3ARTdjB6xn2zy&ust=1704812638688000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIDrsZOIzoMDFQAAAAAdAAAAABAI');
+    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Forientacion.universia.edu.pe%2Finfodetail%2Forientacion%2Fconsejos-tecnoversia%2Fconsejos-para-rendir-un-buen-examen-psicometrico-5566.html&psig=AOvVaw0gFXqOzNj6Z2HKiGmiVYyj&ust=1704812938724000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLDe7qWJzoMDFQAAAAAdAAAAABAE');
     background-size:100%;
 }
 
