--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url('https://www.google.com/url?sa=i&url=https%3A%2F%2Forientacion.universia.edu.pe%2Finfodetail%2Forientacion%2Fconsejos-tecnoversia%2Fconsejos-para-rendir-un-buen-examen-psicometrico-5566.html&psig=AOvVaw0gFXqOzNj6Z2HKiGmiVYyj&ust=1704812938724000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLDe7qWJzoMDFQAAAAAdAAAAABAE');
+    background-image:url('FONDO.jpeg');
     background-size:100%;
 }
 
