--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-    background-image:url('FONDO.png');
+    background-image:url('FONDO.jpeg');
     background-size:100%;
 }
 
@@ -28,7 +28,7 @@ body {
     position        : absolute;
     padding         : 10px 20px;
     font-size       : 18px;
-    background-color: #F51C02;
+    background-color: #e9f502;
     color           : purple;
     border          : none;
     border-radius   : 3px;
