--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     position        : absolute;
     padding         : 10px 20px;
     font-size       : 18px;
-    background-color: #e9f502;
+    background-color: #2bf502;
     color           : purple;
     border          : none;
     border-radius   : 3px;
