--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     position        : absolute;
     padding         : 10px 20px;
     font-size       : 18px;
-    background-color: #ff6a94;
+    background-color: #63f502;
     color           : white;
     border          : none;
     border-radius   : 3px;
