--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html,
     background-color: #2bff82;
 } */
 body {
-    background-image:url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.socialeventos.es%2Fcomo-organizar-pedida-de-mano%2F&psig=AOvVaw0JHCnueetGIzt-Busq8Tps&ust=1726451823978000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCIjUva_sw4gDFQAAAAAdAAAAABAE);
+    background-image:url(https://www.hotelvinasqueirolo.com/blog/wp-content/uploads/2020/02/como-hacer-una-pedida-de-mano-especial-en-el-hotel-vinas-queirolo-1066x546.jpg);
     background-size:100%;
 }
 
