--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html,
     background-color: #2bff82;
 } */
 body {
-    background-image:url(https://www.hotelvinasqueirolo.com/blog/wp-content/uploads/2020/02/como-hacer-una-pedida-de-mano-especial-en-el-hotel-vinas-queirolo-1066x546.jpg);
+    background-image:url(https://media.istockphoto.com/id/626866198/es/foto/silueta-del-hombre-joven-con-anillo-de-compromiso-proponiendo-a-la-mujer.jpg?s=1024x1024&w=is&k=20&c=EAxixIR2d1qiPzi5H3jGLjBkJwM3KpMZ_F4zS2qXsRo=);
     background-size:100%;
 }
 
