--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
       margin: 0;
       padding: 0;
       font-family: "Arial", sans-serif;
-      background-image: url("https://media.istockphoto.com/id/626866198/es/foto/silueta-del-hombre-joven-con-anillo-de-compromiso-proponiendo-a-la-mujer.jpg?s=1024x1024&w=is&k=20&c=EAxixIR2d1qiPzi5H3jGLjBkJwM3KpMZ_F4zS2qXsRo=");
+      background-image: url("https://cdn.shopify.com/s/files/1/0503/6153/2583/files/2_191d6379-b66b-4318-8f71-684f8ff5da76_1024x1024.png?v=1723633082");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
