--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ html,
 } */
 body {
     background-image:url(https://media.istockphoto.com/id/626866198/es/foto/silueta-del-hombre-joven-con-anillo-de-compromiso-proponiendo-a-la-mujer.jpg?s=1024x1024&w=is&k=20&c=EAxixIR2d1qiPzi5H3jGLjBkJwM3KpMZ_F4zS2qXsRo=);
-    background-size:100%;
+     background-size: cover;          /* Ajusta el fondo al tamaño del contenedor manteniendo proporción */
+    background-position: center;     /* Centra la imagen */
+    background-repeat: no-repeat;    /* Evita que se repita */
+    background-attachment: fixed; 
 }
 
 .container {
