--- a/style.css
+++ b/style.css
@@ -46,3 +46,26 @@ body {
 .container .buttons>#btnno {
     margin-left: 70px;
 }
+/* esto es agregado */
+@media (max-width: 768px) {
+    .container .title {
+        font-size: 24px;
+        text-align: center;
+        padding: 0 10px;
+    }
+
+    .container .buttons {
+        margin-top: 20px;
+        margin-left: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container .buttons .btn {
+        position: static;
+        margin: 10px 0;
+        width: 80%;
+        font-size: 16px;
+    }
+}
+
