--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html,
     background-color: #2bff82;
 } */
 body {
-     background-image: url("...tu-imagen.jpg");
+     background-image: url("https://bijoya.com/blogs/entradas/consejos-para-una-pedida-de-mano-perfecta?srsltid=AfmBOoqZcWEdCBXBVPLZqHsiW_Ept5xWIsuzSQOPTn2-_tpu1OhY3j4W");
   background-size: cover;
   background-position: 50% 30%;  /* Mueva el foco vertical (ajusta % hasta que se vea bien) */
   background-repeat: no-repeat;
