--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body { height: 100%; margin: 0; }
     background-color: #2bff82;
 } */
 body {
-     background-image: url("https://cdn.shopify.com/s/files/1/0503/6153/2583/files/2_191d6379-b66b-4318-8f71-684f8ff5da76_1024x1024.png?v=1723633082");
+     background-image: url("https://pymstatic.com/61731/conversions/frases-tecnologia-wide_webp.webp");
   background-size: cover;
   background-position: 50% 30%;  /* Mueva el foco vertical (ajusta % hasta que se vea bien) */
   background-repeat: no-repeat;
