--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body { height: 100%; margin: 0; }
     background-color: #2bff82;
 } */
 body {
-     background-image: url("https://pymstatic.com/61731/conversions/frases-tecnologia-wide_webp.webp");
+     background-image: url("https://e0.pxfuel.com/wallpapers/642/853/desktop-wallpaper-moon-and-stars-moon-and-stars-laptop.jpg");
   background-size: cover;
   background-position: 50% 30%;  /* Mueva el foco vertical (ajusta % hasta que se vea bien) */
   background-repeat: no-repeat;
